# rs-trading

./: .gitignore  Cargo.toml  Makefile.toml  README.md  package.json
docs/: indicators.md
examples/: candles_data.rs  data_replay.rs  indicators.ipynb
examples/candles/: xauusd_1m.csv
hk-redux-rs/src/: lib.rs
rs-ta/: Cargo.toml
rs-ta/src/: errors.rs  lib.rs  traits.rs
rs-ta/src/indicators/: exponential_moving_average.rs
rstrading/: Cargo.toml
rstrading/candles/: xauusd_1m.csv
rstrading/src/: lib.rs
rstrading/src/controls/: bar_replay.rs  chart.rs
rstrading/src/core/: mod.rs
rstrading/src/data/: candle.rs  csv_data_source.rs  data_source.rs
rstrading/src/indicators/: indicator.rs
rstrading/src/strategies/: rsi_strategy.rs
rust-lib/: Cargo.toml
rust-lib/hk-dispatcher/: Cargo.toml  build.rs
rust-lib/hk-dispatcher/protos/: add_event.proto  chart.proto  ffi_event_type.proto  ffi_request.proto  ffi_response.proto
rust-lib/hk-dispatcher/src/: dispatcher.rs  event_emitter.rs  lib.rs  message_handler.rs  proto_extend.rs  runtime.rs  task.rs  wasm.rs
rust-lib/hk-dispatcher/src/protos/: add_event.rs  ffi_event_type.rs  ffi_request.rs  ffi_response.rs  mod.rs  protobuf.rs
rust-lib/hk-infra/: Cargo.toml
rust-lib/hk-infra/src/: errors.rs  lib.rs  platform_utils.rs
rust-lib/hk-infra/src/event_dispatcher/: async_dispatcher.rs  mod.rs  typeid_event_dispacher.rs
rust-lib/hk-infra/src/native/: future.rs
rust-lib/hk-infra/src/wasm/: future.rs
rust-lib/hk-redux-rs/src/: subscriber.rs
rust-lib/hk-redux-rs/src/store/worker/: mod.rs
rust-lib/hk-trading/: Cargo.toml
rust-lib/hk-trading/examples/: candles_chart.rs  data_replay.rss
rust-lib/hk-trading/protos/: chart.proto
rust-lib/hk-trading/src/: chrono_utils.rs  errors.rs  lib.rs  math_utils.rs  message_handler.rs  test_helper.rs  wasm.rs
rust-lib/hk-trading/src/charts/: builder.rs  chart_layout.rs  chart_svg_drawing.rs  context.rs  grid.rs  mesh.rs  mod.rs  trading_chart.rs
rust-lib/hk-trading/src/charts/backend/: mod.rs  style.rs
rust-lib/hk-trading/src/charts/context/: context.rs  mod.rs
rust-lib/hk-trading/src/charts/context/context/cartesian2d/: draw_impl.rs  mod.rs
rust-lib/hk-trading/src/charts/coord/: mod.rs  translate.rs
rust-lib/hk-trading/src/charts/coord/ranged1d/: mod.rs
rust-lib/hk-trading/src/charts/coord/ranged1d/types/: datetime.rs  mod.rs  numeric.rs
rust-lib/hk-trading/src/charts/coord/ranged2d/: cartesian.rs
rust-lib/hk-trading/src/charts/data/: mod.rs
rust-lib/hk-trading/src/charts/drawing/: area.rs  mod.rs
rust-lib/hk-trading/src/charts/drawing/backend_impl/: mocked.rs  mod.rs
rust-lib/hk-trading/src/charts/elements/: basic_shapes.rs  candlestick.rs  dynelem.rs  mocked_element.rs  mod.rs
rust-lib/hk-trading/src/charts/overlays/: empty.rs  mod.rs  ohlc.rs  ohlcs.rs  series.rs
rust-lib/hk-trading/src/charts/style/: color.rs  mod.rs  shape.rs  size.rs
rust-lib/hk-trading/src/charts/style/colors/: full_palette.rs  mod.rs
rust-lib/hk-trading/src/charts/svg_backend/: mod.rs  svg.rs
rust-lib/hk-trading/src/data/: candle.rs  candle_block.rs  csv_data_source.rs  data_source.rs  datafeed_service.rs  hk_trading_candles_data_source.rs  mod.rs  resolution.rs  symbol.rs  symbol_service.rs
rust-lib/hk-trading/src/drawing/: mod.rs
rust-lib/hk-trading/src/indicators/: exponential_moving_average.rs  indicator.rs  indicator_manager.rs  message_handler.rs  mod.rs  relative_strength_index.rs  traits.rs
rust-lib/hk-trading/src/strategies/: rsi_strategy.rs
rust-lib/hk-trading/src/utils/: mod.rs  path_utils.rs
rust-lib/hk-trading/tests/: mod.rs
rust-lib/hk-trading/tests/data/: datafeed_service_test.rs  mod.rs
rust-lib/rstrading/examples/: candles_chart.rs  data_stream.rs
rust-lib/rstrading/src/core/: pub_sub.rs
rust-lib/rstrading/src/indicators/: exponential_moving_average.rs
rust-lib/rstrading/src/indicators/pivot_points/: mod.rs
rust-lib/web_chart/: .gitignore  Cargo.toml  index.html
rust-lib/web_chart/src/: lib.rs  main.module.scss  main.rs
rust-lib/web_chart/src/actions/: load_candles.rs  mod.rs
rust-lib/web_chart/src/components/: chart.module.scss  chart.rs  chart_control.module.scss  chart_control.rs  date_time_picker.rs  mod.rs  ohlc.rs  ohlc_gen.rs  shanhai_index.rs
rust-lib/web_chart/src/contexts/: mod.rs  ohlc_feed_service_ctx.rs
rust-lib/web_chart/styles/: bundle.css
rust/hk-redux-rs/: Cargo.toml  README.md
rust/hk-redux-rs/src/: combine_reducer.rs  create_slice.rs  middleware.rs
rust/hk-redux-rs/src/store/: mod.rs
rust/hk-redux-rs/src/store/worker/: mailbox.rs  mod.rs  subscribe.rs
rust/rstrading/: Cargo.toml  LICENSE
rust/rstrading/examples/: data_replay.rs
rust/rstrading/src/: errors.rs
rust/rstrading/src/data/: candle.rs
rust/rstrading/src/indicators/: indicator.rs
rust/rstrading/src/strategies/: mod.rs
rust/web_chart/: Cargo.toml
rust/web_chart/src/: main.rs
scripts/makefile/: proto.toml  web.toml
src/: event_listener.rs  lib.rs  traits.rs
src/controls/: bar_replay.rs  mod.rs
src/core/: mod.rs  pub_sub.rs
src/data/: candle.rs  csv_data_source.rs  data_source.rs  historical.rs  mod.rs  traits.rs
src/drawing/: mod.rs
src/indicators/: exponential_moving_average.rs  mod.rs  relative_strength_index.rs  traits.rs
src/indicators/pivot_points/: pivot_high.rs  pivot_points_multitimeframe.rs
src/strategies/: mod.rs  rsi_strategy.rs
typescript/: package.json  pnpm-lock.yaml
web_chart/src/components/: chart_control.rs  date_time_picker.rs
