[workspace]
members = [ "hk-dispatcher", "hk-trading", "web_chart" ]
resolver = "2"

[workspace.dependencies]
tracing = "0.1.40"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
protobuf = { version = "3.4.0", features = ["with-bytes"] }
protobuf-codegen = "3.4.0"
hktrading-client = "0.0.8"
chrono = { version = "0.4.21", features = ["serde", "wasmbind"] }