[package]
name = "hk-infra"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project.workspace = true
tracing.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
hktrading-client.workspace = true