[package]
name = "hk-trading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono.workspace = true
serde.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
protobuf.workspace = true
serde_json = "1.0.83"
futures = "0.3"
plotters = "*"
tokio = { version = "1", features = ["sync", "macros", "rt", "io-util", "time"] }
csv = "1.3.0"
async-trait = "0.1.78"
hktrading-client.workspace = true
hk-dispatcher = { path = "../hk-dispatcher" }
hk-infra = { path = "../hk-infra"}
lazy_static.workspace = true


# [[example]]
# name = "candles_chart"
# crate-type = ["bin"]
