[package]
name = "rstrading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.21", features = ["serde", "wasmbind"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
rxrust = "1.0.0-beta.0"
futures = "0.3"
plotters = "*"
event-listener="^4.0.3"
tokio = { version = "1", features = ["full"] }
hk-redux-rs = { path = "../hk-redux-rs", features = ["full"]}
csv = "1.3.0"

[[example]]
name = "candles_chart"
crate-type = ["bin"]